package org.example;

public interface Task {

   //Restituisce il nome del task.
   //Ogni implementazione decide come gestirlo internamente.

   String getName();






}
